--- a/templates/page.jade
+++ b/templates/page.jade
@@ -2,13 +2,19 @@
 html
     head
         title= "Poker Face"
-        script(src='/chat.js')
+        script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js')
+        script(src='//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js')
+        script(src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js')
+        script(src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js')
         script(src='/socket.io/socket.io.js')
+        script(src='/chat.js')
+        
     body
-        #content(style='width: 500px; height: 300px; margin: 0 0 20px 0; border: solid 1px #999; overflow-y: scroll;')
-        .controls
+        #identity
             | Name: 
             input#name(style='width:350px;')
-            br
+            input#join(type='button', value='Join')
+        #content(style='width: 500px; height: 300px; margin: 0 0 20px 0; border: solid 1px #999; overflow-y: scroll;')
+        .controls
             input#field(style='width:350px;')
             input#send(type='button', value='send')
